--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="index.css"/>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
          <meta charset="UTF-8">
         <title>Anna Rosenberg</title>
@@ -11,9 +11,17 @@
         <div id ="title">
             <h1>Anna Rosenberg</h1>
         </div>
+        <div id ="buttons">
+            <ul>
+                <li><button type="button1">1</button></li>
+                <li><button type="button2">2</button></li>
+                <li><button type="button3">3</button></li>
+            </ul>
+        </div>
         <div id="bottom">
+            <!--
             <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>
+            -->
         </div>
     </body>
-
 </html>
