--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+        <script src="index.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
          <meta charset="UTF-8">
         <title>Anna Rosenberg</title>
