--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
             <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>
             -->
         </div>
+        <div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
+</div>
     </body>
 </html>
