getting buttons working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id ="buttons">
             <ul>
-                <li><button type="button1">1</button></li>
+                <li><button id="button1" onclick="window.location.href='graphic1.html'">1</button></li>
                 <li><button type="button2">2</button></li>
                 <li><button type="button3">3</button></li>
             </ul>
@@ -25,16 +25,16 @@
             -->
         </div>
         <div id="background-wrap">
-    <div class="bubble x1"></div>
-    <div class="bubble x2"></div>
-    <div class="bubble x3"></div>
-    <div class="bubble x4"></div>
-    <div class="bubble x5"></div>
-    <div class="bubble x6"></div>
-    <div class="bubble x7"></div>
-    <div class="bubble x8"></div>
-    <div class="bubble x9"></div>
-    <div class="bubble x10"></div>
-</div>
+            <div class="bubble x1"></div>
+            <div class="bubble x2"></div>
+            <div class="bubble x3"></div>
+            <div class="bubble x4"></div>
+            <div class="bubble x5"></div>
+            <div class="bubble x6"></div>
+            <div class="bubble x7"></div>
+            <div class="bubble x8"></div>
+            <div class="bubble x9"></div>
+            <div class="bubble x10"></div>
+        </div>
     </body>
 </html>
