--- a/graphic2.html
+++ b/graphic2.html
@@ -14,9 +14,9 @@
         </div>
         <div id ="buttons">
             <ul>
-                <li><button id="button1" onclick="graphic1.html">1</button></li>
-                <li><button type="button2" onclick="graphic2.html">2</button></li>
-                <li><button type="button3" onclick="graphic3.html">3</button></li>
+                <li><button id="button1" onclick="window.location.href='graphic1.html'">1</button></li>
+                <li><button id="button2" onclick="window.location.href='graphic2.html'">2</button></li>
+                <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
         </div>
         <div id="bottom">
