--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div id ="buttons">
             <ul>
                 <li><button id="button1" onclick="window.location.href='graphic1.html'">1</button></li>
-                <li><button type="button2">2</button></li>
-                <li><button type="button3">3</button></li>
+                <li><button id="button2" onclick="window.location.href='graphic2.html'">2</button></li>
+                <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
         </div>
         <div id="bottom">
