clicking on title now returns to index

--- a/graphic1.html
+++ b/graphic1.html
@@ -10,7 +10,7 @@
 
     <body>
         <div id ="title">
-            <h1>Anna Rosenberg</h1>
+            <h1 onclick="window.location.href='index.html'">Anna Rosenberg</h1>
         </div>
         <div id ="buttons">
             <ul>
