--- a/graphic3.html
+++ b/graphic3.html
@@ -12,16 +12,16 @@
         <div id ="title">
             <h1 onclick="window.location.href='index.html'">Anna Rosenberg</h1>
         </div>
-        <div id ="buttons">
+        <!--<div id ="buttons">
             <ul>
                 <li><button id="button1" onclick="window.location.href='graphic1.html'">1</button></li>
                 <li><button id="button2" onclick="window.location.href='graphic2.html'">2</button></li>
                 <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
-        </div>
+        </div>-->
         <div id="bottom">
-            <!--
+            <button id="home" onclick="window.location.href='index.html'">home</button>   
             <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>
-            -->
+            
     </body>
 </html>
