trying out some css techniques with the title

--- a/graphic3.html
+++ b/graphic3.html
@@ -22,6 +22,6 @@
         <div id="bottom">
             <button id="home" onclick="window.location.href='index.html'">home</button>   
             <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>
-            
+        </div>
     </body>
 </html>
