--- a/graphic1.html
+++ b/graphic1.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+        <link rel="stylesheet" type="text/css" href="graphic1.css"/>
         <script src="index.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
          <meta charset="UTF-8">
@@ -19,6 +20,16 @@
                 <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
         </div>-->
+        <div class="container">
+            <div class="drop-ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+        </div>
         <div id="bottom">
             <button id="home" onclick="window.location.href='index.html'">home</button>   
             <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>
