editing drop ball game, starting javaScript

--- a/graphic1.html
+++ b/graphic1.html
@@ -21,6 +21,7 @@
             </ul>
         </div>-->
         <div class="container">
+            <button id="drop" onclick="ondrop">Drop</button>
             <div class="drop-ball"></div>
             <div class="ball"></div>
             <div class="ball"></div>
