ball moves on button click, JS

--- a/graphic1.html
+++ b/graphic1.html
@@ -11,7 +11,7 @@
 
     <body>
         <div id ="title">
-            <h1 onclick="window.location.href='index.html'">Anna Rosenberg</h1>
+            <!--<h1 onclick="window.location.href='index.html'">Anna Rosenberg</h1>-->
         </div>
         <!--<div id ="buttons">
             <ul>
@@ -20,9 +20,9 @@
                 <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
         </div>-->
+        <button id="drop-button" onclick="moveDown()">Drop</button>
         <div class="container">
-            <button id="drop" onclick="ondrop">Drop</button>
-            <div class="drop-ball"></div>
+            <div id="drop-ball"></div>
             <div class="ball"></div>
             <div class="ball"></div>
             <div class="ball"></div>
