fixed drop button

--- a/graphic1.html
+++ b/graphic1.html
@@ -20,7 +20,9 @@
                 <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
         </div>-->
-        <button id="drop-button" onclick="moveDown()">Drop</button>
+        <div id="drop">
+            <button id="drop-button" onclick="moveDown()">Drop</button>
+        </div>
         <div class="container">
             <div id="drop-ball"></div>
             <div class="ball"></div>
