editing js for graphic 2

--- a/graphic2.html
+++ b/graphic2.html
@@ -19,6 +19,14 @@
                 <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
         </div>-->
+        <div id="content">
+            <div id="light-on" onclick="showContent('light-off')">
+                <img src="light1.svg" alt="lightbulb on">
+            </div>
+            <div id="light-off" onclick="showContent('light-on')">
+                <img src="light2.svg" alt="lightbulb off">
+            </div>
+        </div>
         <div id="bottom">
             <button id="home" onclick="window.location.href='index.html'">home</button>   
             <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>
