lightbulb svg graphic js works!

--- a/graphic2.html
+++ b/graphic2.html
@@ -20,7 +20,7 @@
             </ul>
         </div>-->
         <div id="content">
-            <div id="light-on" onclick="showContent('light-off')">
+            <div id="light-on" onclick="showContent('light-off')" style="display: none;">
                 <img src="light1.svg" alt="lightbulb on">
             </div>
             <div id="light-off" onclick="showContent('light-on')">
