--- a/documentation.html
+++ b/documentation.html
@@ -9,14 +9,19 @@
     </head>
 
     <body>
-        <div id ="title">
-            <h1>Anna Rosenberg</h1>
+        <div id ="title" style="margin-top: -100px;">
+            <h1>Documentation</h1>
         </div>
-        <div id="content">
-            <h2>Documentation</h2>
-            <p>
-                hello there
-            </p>
+        <div id="content" style="width: 50%; min-width: 300px; position: relative; left: 25%;">
+            <ul style="list-style: none;">
+                <li>Title font: Lobster, from <a href="https://fonts.google.com/specimen/Lobster">Google Fonts</a></li>
+                <li>Content font: Raleway, from <a href="https://fonts.google.com/specimen/Raleway">Google Fonts</a></li>
+                <li><h2>Page 1</h2></li>
+                <li>Brick SVG background courtesy of <a href="http://www.heropatterns.com/">Hero Patterns</a></li>
+                <li>Used CSS animations for consistent ball animations, JavaScript function called when button is clicked to drop red ball.</li>
+                <li><h2>Page 2</h2></li>
+                <li>Lightbulb SVG courtesy of <a href="https://upload.wikimedia.org/wikipedia/commons/d/dd/Emojione_1F4A1.svg">Wikimedia Commons</a>.</li>
+                <li>I changed the colors of  the light-on and light-off in two separate SVG files. These two SVG files are in divs which change in a JavaScript function I wrote. This function also changes the background color.</li>
         </div>
         <div id="bottom"> 
             <button id="home" onclick="window.location.href='index.html'">home</button>              
