--- a/graphic2.html
+++ b/graphic2.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <!--
         <div id ="title">
             <h1 onclick="window.location.href='index.html'">Anna Rosenberg</h1>
         </div>
@@ -19,11 +20,11 @@
                 <li><button id="button3" onclick="window.location.href='graphic3.html'">3</button></li>
             </ul>
         </div>-->
-        <div id="content">
-            <div id="light-on" onclick="showContent('light-off')" style="display: none;">
+        <div id="content" style="margin-top: 20%; margin-bottom: 20%;">
+            <div id="light-on" onclick="showContent('light-off')">
                 <img src="light1.svg" alt="lightbulb on">
             </div>
-            <div id="light-off" onclick="showContent('light-on')">
+            <div id="light-off" onclick="showContent('light-on')" style="display: none;">
                 <img src="light2.svg" alt="lightbulb off">
             </div>
         </div>
