--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </ul>
         </div>
         <div id="bottom">              
-            <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>     
+            <!--<section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>-->
+            <a href="documentation.html" style="font-family: 'Raleway', sans-serif;">Documentation</a>     
         </div>
         <div id="background-wrap">
             <div class="bubble x1"></div>
