--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <a href="documentation.html" style="font-family: 'Raleway', sans-serif;">Documentation</a>     
         </div>
         <div id="background-wrap">
-            <div class="bubble x1"></div>
-            <div class="bubble x2"></div>
-            <div class="bubble x3"></div>
-            <div class="bubble x4"></div>
-            <div class="bubble x5"></div>
-            <div class="bubble x6"></div>
-            <div class="bubble x7"></div>
-            <div class="bubble x8"></div>
-            <div class="bubble x9"></div>
-            <div class="bubble x10"></div>
+            <div class="bubble x1" onclick="pop(this)"></div>
+            <div class="bubble x2" onclick="pop(this)"></div>
+            <div class="bubble x3" onclick="pop(this)"></div>
+            <div class="bubble x4" onclick="pop(this)"></div>
+            <div class="bubble x5" onclick="pop(this)"></div>
+            <div class="bubble x6" onclick="pop(this)"></div>
+            <div class="bubble x7" onclick="pop(this)"></div>
+            <div class="bubble x8" onclick="pop(this)"></div>
+            <div class="bubble x9" onclick="pop(this)"></div>
+            <div class="bubble x10" onclick="pop(this)"></div>
         </div>
     </body>
 </html>
