--- a/graphic3.html
+++ b/graphic3.html
@@ -10,7 +10,7 @@
 
     <body>
         <div id ="title">
-            <h1 onclick="window.location.href='index.html'">Anna Rosenberg</h1>
+            
         </div>
         <!--<div id ="buttons">
             <ul>
@@ -22,6 +22,18 @@
         <div id="bottom">
             <button id="home" onclick="window.location.href='index.html'">home</button>   
             <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>
+            <div id="background-wrap">
+                <div class="bubble x1" onclick="pop(this)"></div>
+                <div class="bubble x2" onclick="pop(this)"></div>
+                <div class="bubble x3" onclick="pop(this)"></div>
+                <div class="bubble x4" onclick="pop(this)"></div>
+                <div class="bubble x5" onclick="pop(this)"></div>
+                <div class="bubble x6" onclick="pop(this)"></div>
+                <div class="bubble x7" onclick="pop(this)"></div>
+                <div class="bubble x8" onclick="pop(this)"></div>
+                <div class="bubble x9" onclick="pop(this)"></div>
+                <div class="bubble x10" onclick="pop(this)"></div>
+            </div>
         </div>
     </body>
 </html>
