--- a/documentation.html
+++ b/documentation.html
@@ -24,7 +24,11 @@
                 <li>Used CSS animations for consistent ball animations, JavaScript function called when button is clicked to drop red ball.</li>
                 <li><h2>Page 2</h2></li>
                 <li>Lightbulb SVG courtesy of <a href="https://upload.wikimedia.org/wikipedia/commons/d/dd/Emojione_1F4A1.svg">Wikimedia Commons</a>.</li>
+                <li>Lightswitch sound effects from <a href="https://www.soundjay.com/switch-sounds-1.html">Sound Jay</a></li>
                 <li>I changed the colors of  the light-on and light-off in two separate SVG files. These two SVG files are in divs which change in a JavaScript function I wrote. This function also changes the background color.</li>
+                <li><h2>Page 3</h2></li>
+                <li>Bubble CSS couresty of <a href=" https://codepen.io/Mark_Bowley/pen/mEtqj">Mark Bowley</a></li>
+                <li>I added a hover style to Bowley's CSS, changing the bubble's color and the cursor to a pointer. Addtionally, I added a "pop" JavaScript function so the bubbles would disappear when clicked.</li>
 
                 <button id="home" onclick="window.location.href='index.html'" style="margin-top: 90px;">home</button>              
                 <section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>     
