--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <!--<section id="copyright" style="padding-top: 40px;">&copy; Anna Rosenberg 2017</section>-->
             <a href="documentation.html" style="font-family: 'Raleway', sans-serif;">Documentation</a>     
         </div>
+        <!--
         <div id="background-wrap">
             <div class="bubble x1" onclick="pop(this)"></div>
             <div class="bubble x2" onclick="pop(this)"></div>
@@ -34,6 +35,6 @@
             <div class="bubble x8" onclick="pop(this)"></div>
             <div class="bubble x9" onclick="pop(this)"></div>
             <div class="bubble x10" onclick="pop(this)"></div>
-        </div>
+        </div>-->
     </body>
 </html>
